--- a/webapp/src/main/webapp/style.css
+++ b/webapp/src/main/webapp/style.css
@@ -1,34 +1,31 @@
 body {
-	margin-bottom: 0;
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
+    margin: 0;
 }
 
 td {
-	vertical-align: top;
+    vertical-align: top;
 }
 
 .left {
-	text-align: left;
+    text-align: left;
 }
 
 .right {
-	text-align: right;
+    text-align: right;
 }
 
 .center {
-	text-align: center;
+    text-align: center;
 }
 
 .clear {
-	clear: both;
+    clear: both;
 }
 
 .fullwidth {
-	width: 100%
+    width: 100%
 }
 
 .nowrap {
-	white-space: nowrap;
+    white-space: nowrap;
 }
