Added PrePersist and PreUpdate methods to BlogEntry to handle timestamps Case fixes in Attachment Added "sticky" support to BlogEntry Home page now returns top X most recent entries (currently hardcoded to 10) Added AttachmentHandlerPhaseListener to allow for nicer URLs to fetch attachments

--- a/webapp/src/main/webapp/style.css
+++ b/webapp/src/main/webapp/style.css
@@ -29,3 +29,40 @@ td {
 .nowrap {
     white-space: nowrap;
 }
+
+.blogEntry {
+
+}
+
+.entryTitle {
+    border-bottom: solid 2px;
+    font-size: large;
+    font-weight: bold;
+}
+
+.entryBody {
+
+}
+
+.entryFooter {
+    border-top: dashed 1px;
+    font-size: smaller;
+    font-style: italic;
+    background-color: #ececec;
+}
+
+.ul {
+    margin: 1.12em 0;
+}
+
+ol, ul, dir, menu, dd {
+    margin-left: 40px
+}
+
+ol {
+    list-style-type: decimal
+}
+
+li {
+    display: list-item
+}
